[package]
name = "novpn"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2018"
#description=""
license = "GPL-3.0-or-later"

[dependencies]
tokio       = { version = "1.26.0", features = [ "full" ] }
tokio-util  = { version = "0.7.7", features = [ "codec" ] }
bytes       = "1.4.0"
byteorder   = "1.3.2"
tun         = { version = "0.5.5", features = ["async"] }
structopt   = "0.3.5"
packet      = "0.1"
futures     = "0.3.1"
